--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="mx-auto max-w-md mt-10">
-            <h2 class="text-2xl text-center font-bold leading-tight">Submitted Entries</h2>
+            <h2 class="text-2xl text-center font-bold leading-tight">Entries</h2>
             <table id="user-table" class="table-auto w-full bg-white shadow-md rounded-lg">
                 <thead>
                     <tr>
@@ -69,7 +69,7 @@
                         <th class="px-4 py-2">Email</th>
                         <th class="px-4 py-2">Password</th>
                         <th class="px-4 py-2">Dob</th>
-                        <th class="px-4 py-2">Accepted Terms</th>
+                        <th class="px-4 py-2">Accepted Terms?</th>
                     </tr>
                 </thead>
                 <tbody> </tbody>
